objects/Cross_BU_Check__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for cross BU check</description>
    <fields>
        <fullName>Customer_GIBU__c</fullName>
        <description>This field contains the customer GIBU.</description>
        <label>Customer GIBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Owning_GIBU__c</fullName>
        <description>This field contains the product owning GIBU.</description>
        <label>Product Owning GIBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>This field contains &quot;FC&quot; (Filter Center) or &quot;AP&quot; (Approval Process). It defines if an Opportunity is valid for approval process or must be routed to the filter center.</description>
        <label>Result</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Cross BU Check</label>
</CustomObject>